<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="cancel">C</string>
    <string name="multiply">x</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="numberZero">0</string>





</resources>