<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:theme="@style/TextView"
            android:text=""
            android:textSize="20pt"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/numberTwo"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/twoButton"
            app:layout_constraintTop_toBottomOf="@+id/display" app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintEnd_toStartOf="@+id/threeButton" android:layout_marginTop="84dp"
            app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/numberFour"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourButton"
            app:layout_constraintTop_toBottomOf="@+id/oneButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/numberOne"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/oneButton"
            app:layout_constraintTop_toBottomOf="@+id/display" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="84dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/numberNine"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nineButton"
            app:layout_constraintTop_toBottomOf="@+id/sixButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equalsButton"
            app:layout_constraintTop_toBottomOf="@+id/addButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            app:layout_constraintTop_toBottomOf="@+id/sevenButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:layout_marginStart="8dp"/>
    <Button
            android:theme="@style/Button.Purple"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.153"/>
    <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/multipleButton"
            app:layout_constraintTop_toBottomOf="@+id/subtractButton"
            app:layout_constraintStart_toEndOf="@+id/equalsButton"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@+id/divideButton"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"/>
    <Button
            android:text="@string/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subtractButton"
            app:layout_constraintTop_toBottomOf="@+id/eightButton" app:layout_constraintStart_toEndOf="@+id/addButton"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@+id/zeroButton"/>
    <Button
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/divideButton"
            app:layout_constraintTop_toBottomOf="@+id/zeroButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"/>
    <Button
            android:text="@string/numberFive"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/fiveButton"
            app:layout_constraintTop_toBottomOf="@+id/twoButton" app:layout_constraintStart_toEndOf="@+id/fourButton"
            app:layout_constraintEnd_toStartOf="@+id/sixButton" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/numberEight"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/eightButton"
            app:layout_constraintTop_toBottomOf="@+id/fiveButton"
            app:layout_constraintStart_toEndOf="@+id/sevenButton" app:layout_constraintEnd_toStartOf="@+id/nineButton"
            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.503"/>
    <Button
            android:text="@string/numberThree"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/threeButton"
            app:layout_constraintTop_toBottomOf="@+id/display"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="84dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/numberSix"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sixButton"
            app:layout_constraintTop_toBottomOf="@+id/threeButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/numberSeven"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sevenButton"
            app:layout_constraintTop_toBottomOf="@+id/fourButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/numberZero"
            android:onClick="onClickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/zeroButton"
            app:layout_constraintTop_toBottomOf="@+id/nineButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>